Add newest files from @victormendoza83

--- a/mybib.bib
+++ b/mybib.bib
@@ -1,3 +1,24 @@
+@Article{Bachant2016-VAT-ALM,
+  author =    {P. Bachant and A. Goude and M. Wosnik},
+  title =     {Actuator line modeling of vertical-axis turbines},
+  journal =   {{arXiv} preprint {arXiv}:1605.01449 Submitted to Wind Energy},
+  year =      {2016},
+  owner =     {Pete},
+  timestamp = {2016.05.04},
+  url =       {http://arxiv.org/abs/1605.01449}
+}
+
+@article{dyachuk2013dynamic,
+  title={Dynamic stall modeling for the conditions of vertical axis wind turbines},
+  author={Dyachuk, E. and Goude, A. and Bernhoff, H.},
+  journal={AIAA journal},
+  volume={52},
+  number={1},
+  pages={72--81},
+  year={2013},
+  publisher={American Institute of Aeronautics and Astronautics}
+}
+
 @article{dyachuk,
   title={Aerodynamics of Vertical Axis Wind Turbines: Development of Simulation Tools and Experiments},
   author={Dyachuk, E.},
