Modifications after Goude comments

--- a/mybib.bib
+++ b/mybib.bib
@@ -1,3 +1,10 @@
+@techreport{sheldahl1981aerodynamic,
+  title={Aerodynamic characteristics of seven symmetrical airfoil sections through 180-degree angle of attack for use in aerodynamic analysis of vertical axis wind turbines},
+  author={Sheldahl, R. E. and Klimas, P. C.},
+  year={1981},
+  institution={Sandia National Labs., Albuquerque, NM (USA)}
+}
+
 @Article{Bachant2016-VAT-ALM,
   author =    {P. Bachant and A. Goude and M. Wosnik},
   title =     {Actuator line modeling of vertical-axis turbines},
