--- a/paper.tex
+++ b/paper.tex
@@ -69,7 +69,8 @@ In this work, it was chosen to validate the model
 against wind tunnel data for a pitching blade. This will put the focus on the
 force modeling part in the simulation model.
 
-\subsection{Actuator Line Model (ALM)} Is a three-dimensional and unsteady aerodynamic
+\subsection{Actuator Line Model (ALM)} 
+The ALM is a three-dimensional and unsteady aerodynamic
 model developed by S{\o}rensen and Shen\cite{sorensen1999computation}, used to
 study the flow around wind turbines. It is a combination of a solver of
 Navier-Stokes equations with a so-called actuator line technique, in which
@@ -78,12 +79,12 @@ along lines. These forces are determined using a dynamic stall model commonly
 based on empirical data. This work uses the library turbinesFoam developed by
 Bachant\cite{bachant2015simulating}. This model is based on incompressible Navier-Stokes equation
 \begin{align}
- & \nonumber \\ & \dfrac{\partial \rho \vec{V}}{\partial t} + \vec{V} \cdot \nabla \vec{V} = - \dfrac{1}{ \rho} \nabla p + \nu \nabla ^2 \vec{V} + \vec{f}	  \label{eqmom}  
+ & \nonumber \\ & \dfrac{\partial \vec{V}}{\partial t} + \vec{V} \cdot \nabla \vec{V} = - \dfrac{1}{ \rho} \nabla p + \nu \nabla ^2 \vec{V} + \vec{f}	  \label{eqmom}  
 \end{align} %\begin{align}
 with $\vec{f}$ representing the body forces, which are the loads on the rotating blades for this case.
 
-Lift and drag coefficients of a 2D profile are already known, and these are tabulated and combined with the blade element approach for determining 
-body forces acting on blades. Relative flow velocity $\vec{V}_{rel} $ and angle of attack $\alpha$ are calculated for each blade using the geometric relation between the velocity of the blade $- \omega r$, with $\omega$ representing the angular (rotational) velocity of the rotor and $r$ is the radius of the blade element, and the velocity of the local incoming wind flow $\vec{V}_{in}$. Figure \ref{figvectors} depicts a cross-sectional airfoil element at radius $r$ in the plane perpendicular to the turbine axis.   
+Static lift and drag coefficients of the 2D profile used for this study are already known from the technical technical report made by Sheldahl and Klimas \cite{sheldahl1981aerodynamic}, which is a popular database set containing values for a wide range of Reynolds numbers. These coefficients are tabulated and combined with the blade element approach for determining 
+body forces acting on blades. Relative flow velocity $\vec{V}_{rel} $ and angle of attack $\alpha$ are calculated for each blade using the geometric relation between the velocity of the blade $- \Omega r$, with $\omega$ representing the angular (rotational) velocity of the rotor and $r$ is the radius of the blade element, and the velocity of the local incoming wind flow $\vec{V}_{in}$. Figure \ref{figvectors} depicts a cross-sectional airfoil element at radius $r$ in the plane perpendicular to the turbine axis.   
 
 \begin{figure}[h]
 %\begin{minipage}{36pc}
@@ -97,16 +98,16 @@ body forces acting on blades. Relative flow velocity $\vec{V}_{rel} $ and angle 
 
 Once the angle of attack, relative velocity are obtained, the blade element lift and drag forces per spanwise length unit are calculated as
 \begin{align}
-& \vec{f}_L = \frac{1}{2} \ \rho \ c \ C_L \left| \vec{V}_{rel}^2 \right|  \label{lift}  
+& f_L = \frac{1}{2} \ \rho \ c \ C_L \left| V_{rel} \right|^2  \label{lift}  
 \end{align} %\begin{align}
 \begin{align}
-& \vec{f}_D = \frac{1}{2} \ \rho \ c \ C_D \left| \vec{V}_{rel}^2 \right|  \label{drag}  
+& f_D = \frac{1}{2} \ \rho \ c \ C_D \left| V_{rel} \right|^2  \label{drag}  
 \end{align} %\begin{align}
-where $C_L$ and $C_D$ are the lift and drag coefficients, respectively. Both are in function of the Reynolds number and the angle of attack. It should be emphasized that the direction of the lift and drag are respectively perpendicular and parallel to the relative velocity $\vec{V}_{rel}$. $c$ represents the chord length.
+where $C_L$ and $C_D$ are the lift and drag coefficients, respectively. Both are function of the Reynolds number and the angle of attack. It should be emphasized that the direction of the lift and drag are respectively perpendicular and parallel to the relative velocity $\vec{V}_{rel}$. $c$ represents the chord length.
 
 Same procedure is used to calculate forces from the turbine shaft and blade support struts. After all these forces on the actuator lines are calculated, then are added as a body force source, per unit of density (incompressible assumption), in the momentum Navier-Stokes equations (equation \ref{eqmom}). 
  
-\subsection{Dynamic Stall Modeling (DSM)} Is represented by the Leishman-Beddoes
+\subsection{Dynamic Stall Modeling (DSM)} The DSM is represented by the Leishman-Beddoes
 model\cite{leishman1986generalised} with the modifications of Sheng et
 al\cite{sheng2008modified} and Dyachuk\cite{dyachuk}.
 It is capable to calculate the unsteady lift,
@@ -134,7 +135,7 @@ with $D_\alpha$ as the deficiency function
 \end{align}
 with the empirically derived time constant $T_\alpha$, which has a value of $T_\alpha$ = 6.3 for the NACA0021 airfoil, and $\Delta s$ corresponds to a non-dimensional time-step
 \begin{align}
-& \Delta s| = \frac{2 | \vec{V}_{rel} | \Delta t}{c}		.	\label{deltas}
+& \Delta s = \frac{2 | \vec{V}_{rel} | \Delta t}{c}		.	\label{deltas}
 \end{align}
 
 Because of the reversal flow in the boundary layer, a leading edge vortex is created at the surface of the airfoil. The critical angle of attack $\alpha_{cr_n}$ defines the condition at which dynamic stall begins
@@ -169,7 +170,7 @@ and $D_{f_n}$ is the deficiency function defined as
 \begin{align}
 & D_{f_n} = D_{f_{n-1}} \exp \left( - \frac{\Delta s}{T_f} \right) + (f_n - f_{n-1})\exp \left( - \frac{\Delta s}{2T_f} \right) \label{deff}
 \end{align}
-here, $T_f$ is empirically derived time constant and its value is $T_f$ = 3. Then, the normal force coefficient for unsteady conditions before the dynamic stall onset is calculated as
+Here, $T_f$ is empirically derived time constant and its value is $T_f$ = 3. Then, the normal force coefficient for unsteady conditions before the dynamic stall onset is calculated as
 \begin{align}
 & C_{N_n}^f = C_{N_\alpha} \alpha_{E_n} \left( \frac{1 + \sqrt{f''}}{2} \right)^2	\label{CNf}
 \end{align}
@@ -263,7 +264,7 @@ From Figure \ref{figmesh}, it could be noticed that there is a  variation in the
 
 \textbf{Temporal sensitivity:} Different time-steps were chosen for a varying temporal discretization test, which $\Delta t$ values are 0.001, 0.003, 0.0055 and 0.0075 [s], and these correspond to around 1200, 400, 220 and 160 time-steps per revolution respectively. In this study a coarse mesh with a refinement of 25\%, compared to the reference one, was used. Results are shown in Figure \ref{figdtcoarse}. 
 
-The model is more sensitive to the spatial discretization than the temporal one; same characteristic was obtained by Bachant et al. in \cite{Bachant2016-VAT-ALM}. Accuracy and stability were not affected even for big values for $\Delta t$, as long they are within the limit given by the CFL condition; a Courant number of less than unity is required. On the other hand, it should be considered that small time-step of discretization could cause numerical instabilities due to the fluctuation of the flow fields resolving the transient term $\frac{\partial}{\partial t}$.
+The model is more sensitive to the spatial discretization than the temporal one; same characteristic was obtained by Bachant et al. in \cite{Bachant2016-VAT-ALM}. Accuracy and stability were not affected even for big values for $\Delta t$, as long they are within the limit given by the CFL condition; a Courant number of less than unity is required. On the other hand, it should be considered that small time-step of discretization could cause numerical instabilities due to the fluctuation of the flow fields resolving the transient term $\frac{\partial \alpha}{\partial t}$.
 
 \begin{figure}[h]
 \begin{minipage}{18pc}
@@ -281,7 +282,7 @@ The model is more sensitive to the spatial discretization than the temporal one;
 For a TSR of 4.19 (Figure \ref{fig138}), peaks values for both $C_N$ and $C_T$ are similar to experiments. In this condition, the flow is attached and the blades are not in the stall region. Therefore, model have good agreement with experimental data using unsteady attached angle of attack calculation.
 
 For a TSR of 3.34 (Figure \ref{fig174}), the maximum magnitude of the angle of attack is at
-17.4\degree\ which is in the stall region. Both \textit{CN} and \textit{CT} curves show the delay
+17.4\degree\ which is in the stall region. Both $C_N$ and $C_T$ curves show the delay
 of the flow reattachment, which is characteristic of the dynamic stall
 phenomenon. Peaks of simulated values have close agreement with the measured
 data. The stall onset angle flow reattachment are well predicted.
@@ -326,7 +327,7 @@ reattachment of the flow is further delayed. Simulated peak for $C_T$ is overest
 \end{figure}
 
 \subsection{Turbulence model comparison}
-A simulation with a RANS $k$-$\epsilon$ standard turbulence model was carried out to compare the obtained results against another one using a LES Smagorinsky turbulence model. Figure \ref{RANSLES} shows that for the $C_N$ values there is not considerable difference, but a small improvement has been achieved for the $C_T$ values. Another study cases conducted for a whole turbine simulation showed that the LES turbulence model gives better results than RANS. 
+A simulation with a RANS $k$-$\epsilon$ standard turbulence model was carried out to compare the obtained results against another one using a LES Smagorinsky turbulence model. Figure \ref{RANSLES} shows that for the $C_N$ values there is not considerable difference, but a small improvement has been achieved for the $C_T$ values. 
 
 \begin{figure}[h]
 \begin{minipage}{18pc}
